学習開始の実装
